# gLAB

./: .gitignore  .gitmodules  CMakeLists.txt
include/gLAB/: all.h  application.h  gui.h  shader.h  utils.h  window.h
include/gLAB/math/: transform.h
lib/: glabexternal.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: test.fs  test.vs
src/: app.cpp  app.h  gui.cpp  main.cpp  shader.cpp  window.cpp
